--- a/css/memoryGame.css
+++ b/css/memoryGame.css
@@ -6,39 +6,42 @@ body {
 }
 
 body {
-  display: flex;
+  display: flex; 
+  justify-content: center; 
+  align-items: center; 
+  flex-direction: column;
   background: #FFF; 
   font-family: 'Coda', cursive;
-  }
-  h1 {
+}
+
+h1 {
   font-family: 'Open Sans', sans-serif;
   font-weight: 300;
   padding-top: 10px;
 }
+
 /*Deck related styles*/
 .deck {
   width: 43.5em;
   margin: 0 auto;
-  background: -webkit-linear-gradient(290deg, #02CCBA 0%, #AA7ECD 100%);
   background: linear-gradient(160deg, #02CCBA 0%, #AA7ECD 100%);
   padding: 32px;
   border-radius: 0.4em;
   box-shadow: 12px 15px 20px 0px rgba(46, 61, 73, 0.5);
 }
+/* Card styles */
 .deck .card {
   height: 150px;
   width: 150px;
   background: #2e3d49;
   display: inline-block;
-  margin: 0 30px 30px 0;
-  line-height: 280px;
+  margin: 0 30px 30px 0; 
   font-size: 0;
   color: #ffffff;
   text-align: center;
   border-radius: 8px;
   vertical-align: top;
   cursor: pointer;
-  -webkit-transition: -webkit-transform .3s ease;
   transition: transform .3s ease; 
   font-family: FontAwesome;
   line-height: 150px;
