--- a/css/memoryGame.css
+++ b/css/memoryGame.css
@@ -14,12 +14,16 @@ body {
   font-family: 'Coda', cursive;
 }
 
+
 h1 {
   font-family: 'Open Sans', sans-serif;
   font-weight: 300;
   padding-top: 10px;
 }
 
+.timer{
+	padding-top:80px;
+}
 /*Deck related styles*/
 .deck {
   width: 43.5em;
